<resources>
    <string translatable="false" name="app_name">2048</string>

    <!-- ui messages for google play services -->
    <string name="sign_in_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="UNKNOWN_ERROR">Unknown error.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>

    <!-- button text -->
    <string name="button_text_next">Next</string>
    <string name="button_text_restart">Restart</string>
    <string name="button_text_achievements">Achievements</string>
    <string name="button_text_leaderboard">Leaderboard</string>
    <string name="button_text_rate">Rate</string>
    <string name="button_text_more">More</string>
    <string name="button_text_menu">Menu</string>
    <string name="button_text_start">Start</string>
    <string name="button_text_options">Options</string>
    <string name="button_text_exit">Exit</string>
    <string name="vibrate_on">Vibrate: On</string>
    <string name="vibrate_off">Vibrate: Off</string>
    <string name="sound_on">Sound: On</string>
    <string name="sound_off">Sound: Off</string>
    <string name="text_header_level_select">Select Level</string>

    <!--header text for our game options, &#160; is to create an empty space-->
    <string name="header_option_difficulty">Skill:&#160;</string>
    <string name="header_option_mode">Mode:&#160;</string>

    <!-- Make sure name and value are unique -->
    <string translatable="false" name="preference_file_key">com.gamesbykevin.2048.PREFERENCE_FILE_KEY</string>
    <string translatable="false" name="sound_file_key">com.gamesbykevin.2048.SOUND_FILE_KEY</string>
    <string translatable="false" name="vibrate_file_key">com.gamesbykevin.2048.VIBRATE_FILE_KEY</string>
    <string translatable="false" name="mode_file_key">com.gamesbykevin.2048.MODE_FILE_KEY</string>
    <string translatable="false" name="difficulty_file_key">com.gamesbykevin.2048.DIFFICULTY_FILE_KEY</string>
    <string translatable="false" name="game_stats_file_key">com.gamesbykevin.2048.GAME_STATS_FILE_KEY</string>
</resources>