<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/GameOverPage">

    <!-- Need to show Game Over text etc... -->
    <include layout="@layout/layout_logo" />

    <TableLayout style="@style/TableMenu">
        <TableRow style="@style/RowMenu">
            <Button android:id="@+id/ButtonRestart" style="@style/ButtonMenu" android:text="@string/button_text_restart" android:onClick="onClickRestart" />
        </TableRow>
        <TableRow style="@style/RowMenu">
            <Button android:id="@+id/ButtonRate" style="@style/ButtonMenu" android:text="@string/button_text_rate" android:onClick="onClickRate" />
        </TableRow>
        <TableRow style="@style/RowMenu">
            <Button android:id="@+id/ButtonMore" style="@style/ButtonMenu" android:text="@string/button_text_more" android:onClick="onClickMore" />
        </TableRow>
        <TableRow style="@style/RowMenu">
            <Button android:id="@+id/ButtonMenu" style="@style/ButtonMenu" android:text="@string/button_text_menu" android:onClick="onClickMenu" />
        </TableRow>
    </TableLayout>

    <include layout="@layout/layout_social_icons" />

</LinearLayout>